--- a/CameraSetting.ui
+++ b/CameraSetting.ui
@@ -28,9 +28,9 @@ font: 18px;
 }
 
 #tableWidget::item:focus{
-	/*border: 0px solid rgb(255,209,128);)*/
+	/*border: 0px solid rgb(255,209,128);)
 border: 0px;
-background-color::rgb(255,209,128);
+background-color::rgb(255,209,128);*/
 }
 
 
