--- a/VideoSetting.ui
+++ b/VideoSetting.ui
@@ -29,8 +29,8 @@ font: 18px;
 
 #tableWidget::item:focus{
 	/*border: 0px solid rgb(255,209,128);)*/
-border: 0px;
-background-color::rgb(255,209,128);
+/*border: 0px;
+background-color::rgb(255,209,128);*/
 }
 
 
